--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,7 +3,7 @@
 :root {
 	--dark-color-a: #4267b2;
 	--dark-color-b: #bbbbbb;
-	--light-color: #6d6d6d;
+	--light-color: #444444;
 	--success-color: #65ce65;
 	--error-color: #df3832;
 }
@@ -42,7 +42,7 @@ a {
 
 .chat-container {
 	max-width: 1100px;
-	background: #222222;
+	background: #ffffff;
 	overflow: hidden;
 }
 
@@ -88,7 +88,6 @@ a {
     width: 1em;
 }
 
- 
 .chat-sidebar::-webkit-scrollbar-track {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
@@ -100,7 +99,7 @@ a {
 }
 
 .chat-messages {
-	padding: 16px;
+	padding: 16px 8px;
 	max-height: 308px;
 	overflow-y: scroll;
     background-image: url('../img/chat-bg.jpg');
@@ -113,7 +112,64 @@ a {
 	padding: 8px;
 	margin-bottom: 10px;
 	background-color: var(--light-color);
-	border-radius: 3px;
+	border-radius: 5px;
+}
+
+.chat-messages .message.notification {
+	background-color: #000;
+	display: table;
+	margin: 0 auto 10px;
+	max-width: 70%;
+	text-align: center;
+}
+
+.chat-messages .message.sender {
+	background-color: var(--dark-color-a);
+	border-top-right-radius: 0;
+	margin: 0 4px 10px 16px;
+	position: relative;
+}
+
+.chat-messages .message.sender:after {
+	content: " ";
+	position: absolute;
+	right: -5px;
+	top: 0;
+	border-top: 0;
+	border-right: none;
+	border-left: 8px solid var(--dark-color-a);
+	border-bottom: 8px solid transparent;
+}
+
+.chat-messages .message.reciever {
+	background-color: var(--light-color);
+	border-top-left-radius: 0;
+	margin: 0 16px 10px 4px;
+	position: relative;
+}
+
+.chat-messages .message.reciever:after {
+	content: " ";
+	position: absolute;
+	left: -5px;
+	top: 0;
+	border-top: 0;
+	border-right: 8px solid #444;
+	border-left: none;
+	border-bottom: 8px solid transparent;
+}
+
+.chat-messages .message.reciever .text {
+	color: #fff;
+}
+
+.chat-messages .message.notification .meta,
+.chat-messages .message.notification .meta span {
+	display: none;
+}
+
+.chat-messages .message.notification .text  {
+	color: #fff;
 }
 
 .chat-messages .message .meta {
@@ -252,9 +308,9 @@ i.fas.fa-paper-plane{
 }
 
 iframe {
-	-webkit-box-shadow: 0px 0px 5px 0px rgba(170,170,170,1);
-    -moz-box-shadow: 0px 0px 5px 0px rgba(170,170,170,1);
-    box-shadow: 0px 0px 5px 0px rgba(170,170,170,1);
+	-webkit-box-shadow: 0 0 5px 0 rgba(170,170,170,1);
+    -moz-box-shadow: 0 0 5px 0 rgba(170,170,170,1);
+    box-shadow: 0 0 5px 0 rgba(170,170,170,1);
 	border: 0;
 }
 
