--- a/public/css/style.css
+++ b/public/css/style.css
@@ -41,7 +41,7 @@ a {
 /* Chat Page */
 
 .chat-container {
-	max-width: 1100px;
+	max-width: 100%;
 	background: #ffffff;
 	overflow: hidden;
 }
@@ -56,8 +56,8 @@ a {
 }
 
 .chat-main {
-	display: grid;
-	grid-template-columns: 1fr 3fr;
+	/* display: grid;
+	grid-template-columns: 1fr 3fr; */
 }
 
 .chat-sidebar {
@@ -100,12 +100,11 @@ a {
 
 .chat-messages {
 	padding: 16px 8px;
-	max-height: 308px;
 	overflow-y: scroll;
     background-image: url('../img/chat-bg.jpg');
     background-position: center;
     background-size: contain;
-	height: 308px;
+	height: 80vh;
 }
 
 .chat-messages .message {
